# tkseal

./: .gitignore  LICENSE.txt  README.md  copilot-instructions.md  diff_command_plan.md  minikube-sealed-secrets.sh  pyproject.toml
.github/workflows/: minikube.yaml  publish-package.yaml  tests.yaml
sealedsecret-test/environments/default/: main.jsonnet  plain_secrets.json
src/tkseal/: __init__.py  cli.py  configuration.py  diff.py  exceptions.py  kubectl.py  kubeseal.py  pull.py  seal.py  secret.py  secret_state.py  serializers.py  tk.py  tkseal_utils.py
tests/: conftest.py  test_cli.py  test_configuration.py  test_diff.py  test_kubectl.py  test_kubeseal.py  test_pull.py  test_seal.py  test_secret.py  test_secret_state.py  test_serializers.py  test_tk.py  test_tkseal_utils.py
tests/environments/: plain_secrets.json  sealed_secrets.json
