[project]
name = "tkseal"
version = "1.0.0"
description = "A command-line utility for managing sealed secrets in Kubernetes environments using Grafana Tanka configuration repositories"
authors = [
    {name = "K'Ron Spar", email = "kspar@umich.edu"},
    {name= "Lianet Sepulveda Torres", email = "lisepul@umich.edu"}]
# 3.14 is not stable → breaks tooling (uv, mypy, etc.)
requires-python = ">=3.11,<3.14"
readme = "README.md"
keywords = ["kubernetes", "secrets", "sealed-secrets", "tanka", "k8s"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Runtime dependencies
dependencies = [
    "click>=8.1.0,<=8.3.3",
    "pyyaml>=6.0,<=6.0.3",
]

[project.scripts]
  tkseal = "tkseal.cli:main"

# We need the build system for packaging the package. uv does not replace this.
# Find here the common build baclends: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# We use hatchling for this application because tkseal is a simple CLI tool.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatch where your code is. It need it to package correctly the application.
[tool.hatch.build.targets.wheel]
packages = ["src/tkseal"]
include = ["src/tkseal/py.typed"] # This file signals that a package support type checking.

[tool.uv]
package = true
default-groups = ["dev"]

# Development dependencies
[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11,<0.16",
    "mypy>=1.20.2,<2",
    "types-pyyaml>=6.0.12,<7",
    "types-requests>=2.33.0,<3",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
lint.ignore = [
    "E501",  # line too long, handled by black
]

# Exclude common directories
exclude = ["build", "dist", ".venv", ".git", "__pycache__"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
fix = [] # Autofix issues when possible


# Ruff can format now, so we don't need to run black separately
[tool.ruff.format]
  quote-style = "double"
  indent-style = "space"
  line-ending = "auto"

[tool.mypy]
mypy_path = "src"
files = ["src/tkseal"]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/tkseal",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml", # Added for CI/CD coverage reporting
]

[tool.coverage.run]
  source = ["src"]
  omit = [
      "tests/*",
  ]

[tool.coverage.report]
  exclude_lines = [
      "pragma: no cover",
      "def __repr__",
      "raise AssertionError",
      "raise NotImplementedError",
      "if __name__ == .__main__.:",
      "if TYPE_CHECKING:",
  ]
